--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inspirational Quotes</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="app.js" defer></script>
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <h1>Submit your Inspirational Quote</h1>
       </header>
 
-      <!-- Form to post a new quote-->
+      <!-- Form to post a new quote -->
       <form id="quote-form">
         <textarea id="quote" placeholder="Enter quote" required></textarea>
         <input
@@ -25,15 +25,15 @@
         <button type="submit">Post Quote</button>
       </form>
 
-      <!--Filter and sorting buttons-->
+      <!-- Filter and sorting buttons -->
       <div class="filter-sort">
         <select id="author-filter">
           <option value="All Authors">Filter by Author</option>
         </select>
-        <button id="sort-order">Sort by Time Posted: Newest First</button>
+        <button id="sort-order">Sort by Time Posted</button>
       </div>
 
-      <!-- List to display quotes-->
+      <!-- Section to display quotes -->
       <section>
         <h2>Inspirational Quotes</h2>
         <ul id="quote-list"></ul>
