--- a/client/index.html
+++ b/client/index.html
@@ -4,40 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inspirational Quotes</title>
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="/app.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1>Submit your Inspirational Quote</h1>
-      </header>
+    <h1>Submit your Inspirational Quote</h1>
 
-      <!-- Form to post a new quote -->
-      <form id="quote-form">
-        <textarea id="quote" placeholder="Enter quote" required></textarea>
-        <input
-          type="text"
-          id="author"
-          placeholder="Enter author name"
-          required
-        />
-        <button type="submit">Post Quote</button>
-      </form>
+    <!-- Form for posting a new quote -->
+    <form id="quote-form">
+      <input type="text" id="quote-text" placeholder="Enter quote" required />
+      <input
+        type="text"
+        id="quote-author"
+        placeholder="Enter author name"
+        required
+      />
+      <button type="submit">Post Quote</button>
+    </form>
 
-      <!-- Filter and sorting buttons -->
-      <div class="filter-sort">
-        <select id="author-filter">
-          <option value="All Authors">Filter by Author</option>
-        </select>
-        <button id="sort-order">Sort by Time Posted</button>
-      </div>
-
-      <!-- Section to display quotes -->
-      <section>
-        <h2>Inspirational Quotes</h2>
-        <ul id="quote-list"></ul>
-      </section>
-    </div>
+    <!-- Dropdown to filter quotes by author -->
+    <select id="author-dropdown">
+      <option value="">Select an author</option>
+    </select>
+    <!-- Button to sort quotes by time posted -->
+    <button id="sort-time">Sort by Time Posted</button>
+    <!-- Container to display the filtered quotes -->
+    <h2>Inspirational Quotes</h2>
+    <div id="quotes-container"></div>
+    <script src="app.js"></script>
   </body>
 </html>
